refactor, and change style